# fusion-bench

./: .coverage  FUSION_BENCH_ANALYSIS.md  README.md  README_CN.md  pyproject.toml  start.sh
docs/: api.md
fusion_bench/: __init__.py  cache.py  cli.py
fusion_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fusion_bench/adapters/: __init__.py  mlx_model.py
fusion_bench/engine/: benchmark.py  metal_monitor.py  metrics.py  task_runner.py
fusion_bench/optimizer/: quant_bench.py  tuner.py
fusion_bench/reporter/: bench_site.py  bench_site_db.py  report.py
tests/: test_adapter.py  test_advanced.py  test_bench_site.py  test_bench_site_db.py  test_core.py  test_coverage.py  test_coverage_final.py
